--- a/assets/css/skill.css
+++ b/assets/css/skill.css
@@ -1,6 +1,6 @@
 body {
   background-image: url("../img/skills-img.jpg");
-  background-position: center;
+  background-position: left;
   background-attachment: fixed;
   background-repeat: no-repeat;
 }
@@ -14,4 +14,6 @@ body {
   margin: 50px auto 0 auto;
   text-align: center;
   width: 50%;
+  color: white;
+  font-size: 1.5rem;
 }
