--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,10 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  /* Center and fill the bg */
+  /* background-position: center;
+  background-attachment: fixed;
+  background-repeat: no-repeat; */
 }
 
 /* navbar */
