--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,12 +56,12 @@ nav .active {
 #container {
   margin: 50px auto 0 auto;
   color: white;
-  /* color: rgb(239, 232, 171); */
   text-align: center;
   width: 50%;
 }
 
 #container h1 {
+  /* text-align: right; */
   font-size: 120px;
   margin-top: 190px;
 }
