--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,14 +50,14 @@ nav li a:hover:not(.active) {
 }
 
 nav .active {
-  background-color: rgb(142, 10, 10);
+  background-color: #33ccff;
 }
 
 #container {
   margin: 50px auto 0 auto;
   color: white;
   text-align: center;
-  width: 50%;
+  width: 75%;
 }
 
 #container h1 {
