--- a/assets/css/skill.css
+++ b/assets/css/skill.css
@@ -65,3 +65,12 @@ body {
   z-index: 2;
   box-shadow: 0 0 50px 20px rgba(0, 0, 0, 0.5);
 }
+
+.item-img {
+  background-image: url("../img/features-middle.jpg");
+  height: 100%;
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
